--- a/styles/style.css
+++ b/styles/style.css
@@ -24,18 +24,28 @@
 html {
     width: 100%; height: 200vh;
     background: var(--black);
-    display: none;
     overflow-x: hidden; user-select: none;
     scroll-behavior: smooth;
 
     body::-webkit-scrollbar {
         display: none;
     }
+
+    .checkDevice {
+        width: 100%; height: 100%;
+        background: var(--black);
+        position: fixed; top: 0; left: 0;
+        display: flex; flex-direction: column; gap: 0;
+        justify-content: center; align-items: center;
+        z-index: 5000;
+    }
 }
 
 @media screen and (min-width: 1280px) {
     html {
-        display: block;
+        .checkDevice {
+            display: none;
+        }
     }
 }
 
@@ -637,6 +647,7 @@ button {
         }
     }
 }
+
 
 
 
