--- a/styles/style.css
+++ b/styles/style.css
@@ -648,6 +648,125 @@ button {
     }
 }
 
+.register {
+    width: auto; height: 100vh;
+    background: rgba(0, 0, 0, 0);
+    position: relative;
+    display: flex; flex-direction: column; gap: 0;
+    align-items: center; justify-content: flex-end;
+    z-index: 50;
+
+    .container {
+        width: 100%; height: 73vh;
+        position: relative;
+        display: flex; flex-direction: column; gap: 0;
+        align-items: center; justify-content: center;
+        color: var(--lblack);
+
+        .wrapper {
+            width: 720px; height: auto;
+            /* From https://css.glass */
+            background: rgba(50, 48, 47, 0.4);
+            border-radius: 1.25rem;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+            border: 1px solid rgba(50, 48, 47, 0.2);
+
+            header {
+                padding: 10px 30px;
+                border-bottom: 1px solid var(--lwhite);
+                color: var(--red);
+                font-size: 22px;
+                font-weight: 600;
+            }
+
+            form {
+                margin: 20px 30px;
+
+                .dblField {
+                    margin-bottom: 25px;
+                    display: flex; flex-wrap: wrap;
+                    align-items: center; justify-content: space-between;
+
+                    .field {
+                        height: 35px; width: calc(100% / 2 - 13px);
+                        margin-bottom: 15px; position: relative;
+
+                        input {
+                            width: 100%; height: 100%;
+                            padding: 0 18px 0 48px; border: 1px solid var(--red); border-radius: 5px;
+                            font-size: 16px; outline: none;
+                        }
+                        input::placeholder {
+                            color: var(--lblack);
+                        }
+                        input:focus ~ i{
+                            color: var(--dred);
+                        }
+
+                        i {
+                            position: absolute; top: 50%; left: 18px;
+                            transform: translateY(-50%);
+                            font-size: 17px; pointer-events: none;
+                            transition: .2s;
+                        }
+                    }
+                }
+
+                .message {
+                    position: relative;
+
+                    textarea {
+                        min-width: 100%; max-width: 100%;
+                        border: 1px solid var(--red); border-radius: 5px;
+                        font-size: 16px; outline: none;
+
+                        min-height: 120px; max-height: 120px;
+                        padding: 15px 20px 0 48px;
+                    }
+                    textarea::placeholder {
+                        color: var(--lblack);
+                    }
+                    textarea:focus ~ i {
+                        color: var(--dred);
+                    }
+
+                    i {
+                        position: absolute; left: 18px;
+                        transform: translateY(-50%);
+                        font-size: 17px; pointer-events: none; 
+                        transition: .2s;
+
+                        top: 26px;
+                        font-size: 20px;
+                    }
+                }
+
+                .btnArea {
+                    margin: 15px 0 -5px 0;
+                    display: flex; align-items: center;
+
+                    button {
+                        width: 20%;
+                        padding: 13px 25px; border: none; border-radius: 1rem;
+                        font-size: 18px;
+                    }
+                    button:hover {
+                        background-color: var(--dred);
+                    }
+
+                    span {
+                        margin-left: 30px;
+                        font-size: 1.5rem;
+                        color: var(--red);
+                    }
+                }
+            }
+        }
+    }
+}
+
 
 
 
